--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <p>This is a live demo of a CodeMirror editor in the browser, which is connected over
       a web socket to a hosted Language Server which supports HTML, CSS, and JS/Typescript.
-      The <a href="https://github.com/wylieconlon/lsp-editor-adapter"></a>CodeMirror LSP adapter</a>
+      The <a href="https://github.com/wylieconlon/lsp-editor-adapter">CodeMirror LSP adapter</a>
       which connects these two is language agnostic, so any
       language server should work, but are not yet enabled.
     </p>
@@ -30,6 +30,8 @@
       <li>Function signature documentation with types</li>
       <li>Hover tooltips on symbols</li>
     </ul>
+
+    <p><a href="https://github.com/wylieconlon/codemirror-lsp-example">View example on Github</a></p>
 
     <select class="switcher" name="language">
       <option>Javascript</option>
